2008-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   When opening files remotely using the socket, handle filename
   encoding better and try to auto-detect the used encoding as it
   might be different each time (hopefully closes #2003980).


2008-06-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Add 'Close Other Documents' File menu command (#1976724).
 * src/keybindings.c, src/keybindings.h, src/editor.c:
   Add Go to Start/End of Line keybindings (#1996175).


2008-06-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/vte.c, src/vte.h:
   Move struct _VteTerminal, VteFunctions from vte.h to vte.c.
   Call vte_restart() in vte_keypress() as the code is the same.
 * src/build.c, src/build.h, src/msgwindow.c:
   Add Previous Error menu item.
 * src/build.c, src/keybindings.c, src/keybindings.h:
   Add keybindings for Previous Message, Previous Error commands
   (#1931125).


2008-06-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/prefs.c, src/keyfile.c, src/search.c,
   src/search.h, geany.glade:
   Move 2 search prefs to new Search tab of Preferences dialog.
   Add new search pref: 'Use the current file's directory for Find in
   Files' (#1930435).
   Add PrefEntry struct which is used for an array containing widget
   names to lookup; currently only used for 3 search-related
   GtkToggleButton prefs.
   Add SettingEntry struct which is used for an array containing keyfile
   key and group information; currently only used for 3 search-related
   gboolean settings.
 * src/interface.c, src/ui_utils.h, src/msgwindow.c, src/callbacks.c,
   src/callbacks.h, src/ui_utils.c, geany.glade:
   Add Previous Message menu item.
   Don't abbreviate Find Prev Selected.
   Add ui_tree_view_find_previous().
   Set Next Message menu item sensitivity when clicking on Search menu.